# PARALLEL_FEM_CODES

./: .gitignore
00_CommonFiles/Allocation_Operations/: mycalloc.c
00_CommonFiles/BLAS_Operations/: ddot.c  ourBLAS.h
00_CommonFiles/CPU_Time_Operations/: CPU_time.h  calculateTime.c
00_CommonFiles/IO_Operations/: myfopen.c
00_CommonFiles/MatrixVector_Operations/: matvec.h
00_CommonFiles/Reordering/: matching.c  reordering.c  reordering.h  symrcm.c
00_CommonFiles/Reordering/mc60-1.1.0/example/: Makefile  Makefile.am  Makefile.in  mc60ds.f  mc60ss.data  mc60ss.f  mc60ss.output
00_CommonFiles/Reordering/mc75-1.1.0/: Makefile  Makefile.in  config.status  configure  configure.ac
00_CommonFiles/Reordering/mc75-1.1.0/example/: Makefile  Makefile.am  Makefile.in  mc75ds.data  mc75ds.f  mc75ds.output  mc75ss.data  mc75ss.f  mc75ss.output
00_CommonFiles/Reordering/mc75-1.1.0/src/: Makefile  Makefile.am  Makefile.in  mc75s.f  sdeps.f
00_CommonFiles/Solvers_and_Preconditioners/: BlockDiag2_precond.c  BlockDiagDOF3_precond.c  BlockDiag_precond.c  Block_scaling.c  Diag_precond.c  NOBlockDiag2_precond.c  ilup.c  ilup.h  pardiso.c  pardiso.h  pgmres.c  preconditioners.h  protos.h  scaling.c  scaling.h  solvers.h
00_CommonFiles/Time_Integration/: Criteria.c  Predictor_New.c  Predictor_New_BDF.c  Predictor_New_TRBDF2.c  Predictor_Old.c  Predictor_Old_BDF.c  Predictor_Old_TRBDF2.c  time_integration.h
Mesh_Generator/Mesh_Reordering/: Makefile
Mesh_Generator/Structured_Mesh/: Makefile  meshGenerator.c
Mesh_Generator/Unstructured_Mesh/: Makefile  README  gmsh2Mesh.c
Parallel_Preprocess/: Makefile  Preprocess.c  Preprocess_old.c  clear_ranks  clear_ranks.c  partitioning.c  protos.h  spectral.c  symrcm.c  symrcm.h
Parallel_Preprocess/hsl_mc64/: Makefile
(+220 files in other folders)
